2007-04-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* ChangeLog, ChangeLog.1: Separate shimbun entries.
	(Local Variables): Set fill-column to 79.

2007-04-19  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-form.el (w3m-form-input-textarea-filename): Use MD5 first.

2007-04-14  Naohiro Aota  <nao.aota@gmail.com>

	* w3m-form.el (w3m-form-input-textarea-filename): Truncate filename
	into less than or equal to 255 bytes long.

2007-04-06  Matt Hodges  <M.P.Hodges@rl.ac.uk>

	* w3m.el (w3m-next-buffer): Fix last change when w3m-fb-mode.

2007-04-04  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-view-parent-page): Use numbered prefix argument to move
	the parent directory according to input number.

2007-03-31  Andreas Seltenreich  <seltenreich@gmx.de>

	* w3m.el (w3m-external-view-file): Actually kill the temporary buffer.

2007-03-30  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-ems.el (w3m-tab-mouse-track-selected-tab): Sleep anyway.
	(w3m-tab-make-keymap): Add key-bindings for mouse wheel-up|down to
	w3m-mode-map.

2007-03-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-bug.el (report-emacs-w3m-bug-system-informations): Add gtk.
	(report-emacs-w3m-bug): Bind print-quoted to t.

	* w3m-ems.el (w3m-force-window-update): Do split-window-vertically
	instead of performing enlarge-window/shrink-window for Emacs 21.
	(w3m-tab-mouse-track-selected-tab): Add `decelerate' argument; use it
	instead of to check the value of this-command.
	(w3m-tab-move-right): Set it.
	(w3m-tab-make-keymap): Rearrange.
	(w3m-update-tab-line): Remove.

	* w3m.el (w3m-select-buffer-update): Use w3m-force-window-update
	instead of w3m-update-tab-line.

2007-03-29  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-ems.el (w3m-tab-mouse-track-selected-tab): Tiny fix.
	(w3m-tab-make-keymap): Use next|previous-buffer-action instead of
	w3m-tab-next|previous-buffer.

2007-03-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-ems.el (w3m-tab-mouse-track-selected-tab): Ignore mouse position