@@ -1,3 +1,10 @@
+2007-04-24  Naohiro Aota <nao.aota@gmail.com>
+
+	* w3m.el (w3m-goto-url): Set truncate-lines to nil, if a source or
+	header view.
+	(w3m-view-source): Remove to set truncate-lines.
+	(w3m-view-header): Ditto.
+
 2007-04-19  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* ChangeLog, ChangeLog.1: Separate shimbun entries.
